fix mobile header home, vertical align text

--- a/uis/jobs/src/components/UI/WorkerStats/WorkerStats.module.scss
+++ b/uis/jobs/src/components/UI/WorkerStats/WorkerStats.module.scss
@@ -1,10 +1,13 @@
 @import 'src/App.module.scss';
 
 .space {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-top: 20px;
 }
 
 .topSpace {
     margin-top: 40px;
+}
+
+.flex {
+    display: flex;
 }
